# ilbar

./: .gitignore  .gitmodules  Makefile  README.md  build.zig  meson.build
examples/: defaults.json  shortcuts.json  status_command.json
lib/: SNI.xml
src/: Buffer.zig  Client.zig  Config.zig  Element.zig  IconManager.zig  PointerManager.zig  StatusCommand.zig  Toplevel.zig  c.zig  cache.c  cache.h  cache.zig  client.c  client.h  client.zig  config.c  config.h  glib_util.zig  gui.c  gui.h  gui.zig  icons.c  icons.h  main.c  main.zig  render.c  render.h  util.c  util.h  util.zig
src/SNI/: Host.zig  Item.zig  Watcher.zig  g_util.zig
